--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,36 @@
+# This is a basic workflow to help you get started with Actions
+
 name: CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 jobs:
   build:
-    name: Build and Pushing the Image
+    name: Building and Pushing the Image
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-      
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
-    - name: Login to ECR
+
+    - name: Login to Amazon ECR
       id: login-ecr
-      uses: aws-actions/amazone-ecr-login@v1
-      
+      uses: aws-actions/amazon-ecr-login@v1
+
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: gitops-argocd
-        
+
       run: |
         # Build a docker container and push it to ECR
         git_hash=$(git rev-parse --short "$GITHUB_SHA")
